<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Segunda"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreSeleccionado"
            android:textSize="@dimen/ingreseNombre"/>
        <TextView
            android:id="@+id/txtNombre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingreseNombre"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaSeleccionada"
            android:textSize="@dimen/ingreseNombre"/>
        <TextView
            android:id="@+id/txtFecha2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingreseNombre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefonoSeleccionado"
            android:textSize="@dimen/ingreseNombre"/>
        <TextView
            android:id="@+id/txtTelefono2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingreseNombre"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailSeleccionado"
            android:textSize="@dimen/ingreseNombre"/>
        <TextView
            android:id="@+id/txtEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingreseNombre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionSeleccionada"
            android:textSize="@dimen/ingreseNombre"/>
        <TextView
            android:id="@+id/txtDescripcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ingreseNombre"
            />
    </LinearLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="volver"
        android:text="@string/BotonAnterior"
        android:textSize="24sp"
        android:layout_gravity="bottom"
        />


</LinearLayout>